--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "serve": "npm run build & serve -s dist -l 3000",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
-    "echarts": "^5.6.0",
-    "echarts-for-react": "^3.0.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "serve": "^14.2.4",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
